--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.redstoneblocks.java</groupId>
     <artifactId>Swing-MVC</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <name>Swing MVC</name>
     <description>A Lightweight MVC Framework for Java Swing</description>
