--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,9 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <javadoc.path>${java.home}/../bin/javadoc</javadoc.path>
     </properties>
 
     <build>
@@ -154,7 +157,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                            <javadocExecutable>${javadoc.path}</javadocExecutable>
                         </configuration>
                     </plugin>
                     <plugin>
